--- a/template/home.html
+++ b/template/home.html
@@ -1,6 +1,18 @@
 % rebase('template/base.html')
-<div class="buttons-block">
-    <button type=button onclick="location.href='/person'">ヒトを探す</button>
-    <button type=button onclick="location.href='/something'">モノを探す</button>
-    <button type=button onclick="location.href='/project'">プロジェクトを探す</button>
+<div class="row">
+    <div class="col col-md-12">
+        <a class="btn btn-default btn-lg btn-block" href="/person">ヒトを探す</a>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col col-md-12">
+        <a class="btn btn-default btn-lg btn-block" href="/not_implemented">モノを探す(※未実装)</a>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col col-md-12">
+        <a class="btn btn-default btn-lg btn-block" href="/not_implemented">プロジェクトを探す(※未実装)</a>
+    </div>
 </div>
