--- a/template/person.html
+++ b/template/person.html
@@ -1,8 +1,26 @@
 % rebase('template/base.html')
-<div class="buttons-block">
-    <button type=button onclick="location.href='person/department.html'">学科から探す</button>
-    <button type=button onclick="location.href='person/project.html'">プロジェクトから探す</button>
-    <button type=button onclick="location.href='person/club.html'">部活動から探す</button>
-    <button type=button onclick="location.href='person/ryugaku.html'">留学関係から探す</button>
-    <button type=button onclick="location.href='person/skilltree.html'">スキルツリーから探す</button>
+<div class="row">
+    <div class="col col-md-12">
+        <a class="btn btn-default btn-lg btn-block" href="/person/department">学科から探す</a>
+    </div>
+</div>
+<div class="row">
+    <div class="col col-md-12">
+        <a class="btn btn-default btn-lg btn-block" href="/not_implemented">プロジェクトから探す(※未実装)</a>
+    </div>
+</div>
+<div class="row">
+    <div class="col col-md-12">
+        <a class="btn btn-default btn-lg btn-block" href="/not_implemented">部活動から探す(※未実装)</a>
+    </div>
+</div>
+<div class="row">
+    <div class="col col-md-12">
+        <a class="btn btn-default btn-lg btn-block" href="/not_implemented">留学関係から探す(※未実装)</a>
+    </div>
+</div>
+<div class="row">
+    <div class="col col-md-12">
+        <a class="btn btn-default btn-lg btn-block" href="/not_implemented">スキルツリーから探す(※未実装)</a>
+    </div>
 </div>
