--- a/template/search.html
+++ b/template/search.html
@@ -1,7 +1,7 @@
 % rebase('template/base.html')
 <div class="row">
     <div class="col col-md-12">
-        このページはまだ実装されていません
+        <p>{{ search_string }}の検索結果: 0件</p>
     </div>
 </div>
 <div class="row">
