--- a/template/base.html
+++ b/template/base.html
@@ -3,18 +3,34 @@
     <head>
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <link href="/static/style.css" rel="stylesheet">
-        <title>情報シェアリングシステム</title>
+        <title>ものしりシェアリングシステム</title>
     </head>
     <body>
-        <form action="/search" name="search" method="get">
-            <dl class="search">
-                <dt><input type="text" name="search" value="" placeholder="Search" /></dt>
-                <dd><button><i class="material-icons">search</i></button></dd>
-            </dl>
-        </form>
+        <nav class="nav">
+            <div class="container">
+                <div class="nav-left">
+                    <a href="/" class="nav-item is-brand">ものしりシェアリングシステム</a>
+                </div>
+                <div class="nav-right">
+                    <form class="nav-item" action="/search" name="search" method="get">
+                        <dl class="search">
+                            <dt><input type="text" name="search" value="" placeholder="キーワードから探す" /></dt>
+                            <dd><button><i class="material-icons">search</i></button></dd>
+                        </dl>
+                    </form>
+                </div>
+            </div>
+        </nav>
 
-        {{!base}}
-
+        <div class="container">
+            {{!base}}
+        </div>
     </body>
 </html>
